package food;

public interface Edible {
    void use();
}
