package food;

public enum FoodType {
    FIRST,
    SECOND,
    SALAD,
    DRINK
}
