package food;

public interface NonEdible {
    void throwAway();
}
